[tool.poetry]
name = "punchy"
version = "0.1.0"
description = ""
authors = ["Maksim Shushkevich <meshushkevich@edu.hse.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pystun3 = "^1.0.0"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
